--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,7 +1,8 @@
 .site-layout-content {
-  min-height: 280px;
+  min-height: 5000px;
   padding: 24px;
   background: #fff;
+  border: 1px solid rgb(235, 237, 240);
 }
 .logo {
   float: left;
@@ -14,6 +15,13 @@
   float: right;
   margin: 16px 0 16px 24px;
 }
-  [data-theme="dark"] .site-layout-content {
-    background: #141414;
-  }
+[data-theme="dark"] .site-layout-content {
+  background: #141414;
+}
+
+.site-page-header-ghost-wrapper {
+  border: 1px solid rgb(235, 237, 240);
+}
+.ant-anchor {
+  padding-left: 0px !important;
+}
